clusters/homelab/apps/tesco-protein/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesco-protein
  namespace: tesco-protein
spec:
  selector:
    app: tesco-protein
  ports:
    - name: http
      port: 80
      targetPort: 8080
