clusters/homelab/apps/tesco-protein/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tesco-protein
  namespace: tesco-protein
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: tesco.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tesco-protein
                port:
                  number: 80
  tls:
    - hosts:
        - tesco.tafu.casa
      secretName: tesco-protein-tls
